more content components to reduce duplicated text or links

--- a/content/en/news/7. trancedance20february2023.md
+++ b/content/en/news/7. trancedance20february2023.md
@@ -30,7 +30,7 @@ imageShadow: true
 ## Reservation
 You can reserve your spot via the [website of vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Be aware to register in time as places are limited.
 :ButtonLink{text='Reserve your spot' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
-If you are unable to attend this time, but would like to be kept informed of upcoming sessions, then subscribe to the [Harmonics newsletter](/en/news).
+If you are unable to attend this time, but would like to be kept informed of upcoming sessions, then subscribe to the :MailchimpExternalLink.
 
 ## What is Trance Dance?
 
@@ -58,8 +58,4 @@ For questions you can of course always contact Wouter via the [contact form](/en
 
 ## Location
 
-[vzw Dwarsligger](https://www.dwarsligger33.com/)
-Gontrode Heirweg 141
-9090 Melle, België
-[:Icon{name=logos:google-maps} google maps](https://goo.gl/maps/MnNE7r2AvZPsRXsK9)
-(best is to type 'vzw Dwarligger' in the gps)
+:DwarsliggerLocationInfo
