--- a/content/news/5. trancedance23january2023.md
+++ b/content/news/5. trancedance23january2023.md
@@ -47,8 +47,4 @@ imageShadow: false
 
 ## Locatie
 
-[vzw Dwarsligger](https://www.dwarsligger33.com/)
-Gontrode Heirweg 141
-9090 Melle, België
-[google maps](https://goo.gl/maps/MnNE7r2AvZPsRXsK9)
-(best 'vzw Dwarsligger' intikken in de gps)
+:DwarsliggerLocationInfo
