--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -30,7 +30,7 @@ imageShadow: true
 ## Inschrijvingen
 Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Let op, de plaatsen zijn beperkt, dus schrijf je tijdig in.
 :ButtonLink{text='Reserveer je plek' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
-Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de [Harmonics nieuwsbrief](/news).
+Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de :MailchimpExternalLink.
 
 ## Wat is Trancedans?
 
@@ -58,8 +58,4 @@ Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulie
 
 ## Locatie
 
-[vzw Dwarsligger](https://www.dwarsligger33.com/)
-Gontrode Heirweg 141
-9090 Melle, België
-[:Icon{name=logos:google-maps} google maps](https://goo.gl/maps/MnNE7r2AvZPsRXsK9)
-(best 'vzw Dwarsligger' intikken in de gps)
+:DwarsliggerLocationInfo
