--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -41,6 +41,7 @@
         "fetchingBuildinfo": "fetching build info..."
     },
     "mailinglist": {
+        "name": "Harmonics newsletter",
         "title": "Receive Harmonics news by email",
         "subtitle": "...and stay up to date about the upcoming ecstatic dance & trance dance sessions",
         "subscribe": "Subscribe now",
@@ -59,6 +60,12 @@
     "tickets": "Tickets",
     "toc": {
         "title": "Table of Contents"
+    },
+    "dwarsligger": {
+        "name": "vzw Dwarsligger",
+        "addressLine1": "Gontrode Heirweg 141",
+        "addressLine2": "9090 Melle, Belgium",
+        "gpsInfo": "best is to type 'vzw Dwarligger' in the gps"
     },
     "time_ago_options": {
         "day_future": "in 0 days|tomorrow|in {n} days",
