--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -15,7 +15,7 @@ Karien zal de opening- en closing-cirkel begeleiden.
 Meer info over het aanbod van Karien kan je vinden op haar website [Shamanour](https://www.shamanour.be/).
 
 ## Laten zijn
-Het thema voor deze trancedans sessie is *Laten zijn*. We hoeven niet altijd alles proberen los te laten, weg te duwen of te negeren. Aanvaarding en gewoon laten zijn is vaak de sleutel.
+Het thema voor deze trancedans sessie is *Laten zijn*. We hoeven niet altijd alles wat we niet fijn vinden te moeten los laten, wegduwen of negeren.  Aanvaarding en gewoon laten zijn is vaak de sleutel.
 Ook gewoon *mogen zijn* wie je bent. :Icon{name=mdi:cards-heart-outline}
 
 ::FloatingImage
