--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -29,8 +29,7 @@ imageShadow: true
 ::
 ## Inschrijvingen
 Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Let op, de plaatsen zijn beperkt, dus schrijf je tijdig in.
-
-:TicketsComponent
+:ButtonLink{text='Reserveer je plek' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
 
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de :MailchimpExternalLink.
 
