free spots update 20/02

--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -28,8 +28,9 @@ imageShadow: true
 ---
 ::
 ## Inschrijvingen
-Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Let op, de plaatsen zijn beperkt, dus schrijf je tijdig in.
-:ButtonLink{text='Reserveer je plek' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
+
+*Update 20/02: Door enkele annulaties zijn er een paar plekjes vrij gekomen voor vanavond.*
+*Als je er graag nog bij bent, contacteer Wouter dan rechtstreeks via 't [contactformulier](/contact) of via WhatsApp :WhatsAppLink.*
 
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de :MailchimpExternalLink.
 
