--- a/content/en/news/7. trancedance20february2023.md
+++ b/content/en/news/7. trancedance20february2023.md
@@ -28,8 +28,9 @@ imageShadow: true
 ---
 ::
 ## Reservation
-You can reserve your spot via the [website of vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Be aware to register in time as places are limited.
-:ButtonLink{text='Reserve your spot' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
+*Update 20/02: There are still a few spots available for tonight due to some cancellations.
+Contact Wouter directly using the [contact form](/en/contact) or via WhatsApp :WhatsAppLink if you would like to join.*
+
 If you are unable to attend this time, but would like to be kept informed of upcoming sessions, then subscribe to the :MailchimpExternalLink.
 
 ## What is Trance Dance?
