--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -32,6 +32,8 @@ imageShadow: true
 *Update 20/02: Door enkele annulaties zijn er een paar plekjes vrij gekomen voor vanavond.*
 *Als je er graag nog bij bent, contacteer Wouter dan rechtstreeks via 't [contactformulier](/contact) of via WhatsApp :WhatsAppLink.*
 
+Voorgestelde bijdrage: €48
+
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de :MailchimpExternalLink.
 
 ## Wat is Trancedans?
