--- a/content/en/news/7. trancedance20february2023.md
+++ b/content/en/news/7. trancedance20february2023.md
@@ -28,12 +28,9 @@ imageShadow: true
 ---
 ::
 ## Reservation
-*Update 20/02: There are still a few spots available for tonight due to some cancellations.
-Contact Wouter directly using the [contact form](/en/contact) or via WhatsApp :WhatsAppLink if you would like to join.*
+*Edit: this session has already taken place*
 
-Proposed contribution: €48
-
-If you are unable to attend this time, but would like to be kept informed of upcoming sessions, then subscribe to the :MailchimpExternalLink.
+But if you would like to be kept informed of upcoming sessions, then subscribe to the :MailchimpExternalLink.
 
 ## What is Trance Dance?
 
