login form & buttons

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -65,6 +65,7 @@
         "facebook": "Connect with Facebook",
         "google": "Connect with Google",
         "github": "Connect with GitHub",
+        "firstname": "First Name",
         "email": "E-mail address",
         "magiclinkintro": "of via een \"magic link\" die naar je email adres verstuurd wordt",
         "magiclink": "Magic Link",
