--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -65,6 +65,7 @@
         "facebook": "Verbind via Facebook",
         "google": "Verbind via Google",
         "github": "Verbind via GitHub",
+        "firstname": "Voornaam",
         "email": "Email adres",
         "magiclinkintro": "of via een \"magic link\" die naar je email adres verstuurd wordt",
         "magiclink": "Magic Link",
