login form improvements

--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -62,15 +62,17 @@
     },
     "login": {
         "reservations": "Ticket Reservaties",
-        "intro": "Bevestig je email adres voor toegang tot Harmonics reservaties:",
+        "intro": "Meld je aan om jouw tickets te reserveren of bestaande reservaties te bekijken:",
+        "social": "of verbind via Facebook of Google",
         "facebook": "Facebook",
         "google": "Google",
         "github": "GitHub",
         "firstname": "Voornaam",
         "email": "Email adres",
-        "magiclinkintro": "of via een \"magic link\" die naar je email adres verstuurd wordt",
+        "magiclinkintro": "via een \"magic link\" die naar je email adres verstuurd wordt",
         "magiclink": "Magic Link",
         "sendingmagiclink": "de Magic Link wordt naar je verstuurd...",
+        "youvegotmail": "You've got mail!",
         "loggingyouin": "bezig met inloggen..."
     },
     "tickets": "Tickets",
