--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -62,15 +62,17 @@
     },
     "login": {
         "reservations": "Ticket Reservations",
-        "intro": "Confirm your e-mail address to access to your Harmonics reservations:",
+        "intro": "Log in to reserve your tickets or retrieve previous reservations:",
+        "social": "or connect via Facebook or Google",
         "facebook": "Facebook",
         "google": "Google",
         "github": "GitHub",
         "firstname": "First Name",
         "email": "E-mail address",
-        "magiclinkintro": "of via een \"magic link\" die naar je email adres verstuurd wordt",
+        "magiclinkintro": "with a \"magic link\" send to your e-mail address",
         "magiclink": "Magic Link",
         "sendingmagiclink": "sending you the Magic Link by e-mail...",
+        "youvegotmail": "You've got mail!",
         "loggingyouin": "logging you in..."
     },
     "tickets": "Tickets",
