--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -77,7 +77,9 @@
     },
     "tickets": { 
         "title": "Tickets",
-        "orderbutton": "Register your spot"
+        "orderbutton": "Register your spot",
+        "trancedance20march": "Trance Dance 20 March",
+        "trancedance17april": "Trance Dance 17 April"
     },
     "toc": {
         "title": "Table of Contents"
