--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -77,7 +77,9 @@
     },
     "tickets": {
         "title": "Tickets",
-        "orderbutton": "Reserveer je plek"
+        "orderbutton": "Reserveer je plek",
+        "trancedance20march": "Trancedans 20 maart",
+        "trancedance17april": "Trancedans 17 april"
     },
     "toc": {
         "title": "Pagina Inhoud"
