fixes suggested by sonar

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -63,7 +63,7 @@
   "login": {
     "reservations": "Ticket Reservations",
     "intro": "Log in to reserve your tickets or retrieve previous reservations:",
-    "social": "or connect via Facebook or Google",
+    "social": "or connect using SSO",
     "facebook": "Facebook",
     "google": "Google",
     "github": "GitHub",
