fullscreen mobile nav

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -9,6 +9,7 @@
   "menu": {
     "home": "Home",
     "news": "News",
+    "ecstaticdance": "Ecstatic Dance",
     "trancedance": "Trance Dance",
     "about": "About",
     "contact": "Contact"
