--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -9,6 +9,7 @@
   "menu": {
     "home": "Home",
     "news": "Nieuws",
+    "ecstaticdance": "Ecstatic Dance",
     "trancedance": "Trancedans",
     "about": "Over",
     "contact": "Contact"
