--- a/content/en/news/7. trancedance20february2023.md
+++ b/content/en/news/7. trancedance20february2023.md
@@ -39,7 +39,7 @@ Is Trance dance new to you? Then take a look at our [Trance Dance page](/en/tran
 Curious about the music? On this [Trance Dance Music](/en/news/trancedancemusic) page you can listen to the music of the previous session.
 Each session different music is selected. For this session on February 20, the music will be selected based on the theme *Let it be*
 
-For questions you can of course always contact Wouter via the [contact form](/en/contact) or via WhatsApp :WhatsAppLink
+For questions you can of course always contact Wouter via the [contact form](/en/contact) or via WhatsApp :WhatsAppLink{nr=+32473344656}
 
 
 ## Program February 20
