--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -40,7 +40,10 @@ Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pa
 Benieuwd naar de muziek? Op de pagina [Trancedans Muziek](/news/trancedancemusic) kan je luisteren naar de muziek van de vorige sessie.
 Voor elke sessie wordt telkens andere muziek gebruikt. Voor deze sessie op 20 februari wordt de muziek geselecteerd op basis van het thema *Laten zijn*
 
-Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulier](/contact) of via WhatsApp :WhatsAppLink
+Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulier](/contact) of via WhatsApp :WhatsAppLink{nr=+32473344656}
+
+
+## Program February 20
 
 
 ## Programma 20 februari
