--- a/content/news/8. ecstaticdancesaintsauveur.md
+++ b/content/news/8. ecstaticdancesaintsauveur.md
@@ -16,9 +16,9 @@ Dit de beschrijving die Matty gaf aan het evenement:
 
 > Extatic evening on Sunday 16/4 van 19u tot 21u met Dj Wouter, die plaatjes leerde draaien in de jaren 90 📀 
 > Hij ontdekte enkele jaren terug extatic dance in Bali. Intussen specialiseert hij zich ook in muziek voor trancedans sessies. 
-> At Croix au Pile nummer 1 (Saint-Sauveur) brengt hij een DJ-set met een tribal grounding touch waaronder muziek met hangdrum, percussie en didgeridoo.    
-> Inkom: 15euro vvk 17euro aan de kassa (Doors: 18u45)
-deze prijs omvat de artiesten, huur van de zaal etc. Gratis bronwater en 1 gezonde homemade drink of kruidenthee is ook inbegrepen in de prijs
+> At Croix ou Pile nummer 1 (Saint-Sauveur) brengt hij een DJ-set met een tribal grounding touch waaronder muziek met hangdrum, percussie en didgeridoo.    
+> Inkom: 15euro vvk 17euro aan de kassa (Doors: 18u40)
+deze prijs omvat de artiesten, huur van de zaal etc. Gratis bronwater en 1 gezonde homemade drink of kruidenthee is inbegrepen in de prijs
 
 Inschrijven kan rechtstreeks bij Matty op gsm nr 0484237847 of WhatsApp :WhatsAppLink{nr=+32484237847}
 
