--- a/content/en/news/8. ecstaticdancesaintsauveur.md
+++ b/content/en/news/8. ecstaticdancesaintsauveur.md
@@ -10,7 +10,7 @@ thumbnail: /images/news/xtaticdance16april2023/5443.jpg
 ---
 
 On April Matty Dread ([De Levensboom](https://www.levensboomtherapie.be/) / [:Icon{name=mdi:instagram}](https://www.instagram.com/lifetreetherapy/)) organises  an Xtatic Evening in [Zaal Croix ou Pile](https://www.joycedenooze.be/) at Saint-Sauveur near Ronse.
-For the first 2 edition Matty played the records himself, but for this 3rd edition he asked me to perform a dj-set. 
+For the first 2 edition Matty played the records himself, but for this 3rd edition he asked me ([Wouter](/about)) to perform a dj-set. 
 Thanks Matty :Icon{name=ph:hands-praying size=20} Of course I'm excited about that :Icon{name=la:grin-alt-solid size=20}
 
 This is the description that Matty gave to the event:
