--- a/content/news/8. ecstaticdancesaintsauveur.md
+++ b/content/news/8. ecstaticdancesaintsauveur.md
@@ -10,9 +10,9 @@ thumbnail: /images/news/xtaticdance16april2023/5443.jpg
 ---
 
 Op 16 april organiseert Matty Dread ([De Levensboom](https://www.levensboomtherapie.be/) / [:Icon{name=mdi:instagram}](https://www.instagram.com/lifetreetherapy/) ) een Xtatic Evening in [Zaal Croix ou Pile](https://www.joycedenooze.be/) te Saint-Sauveur nabij Ronse.
-Bij de eerste 2 edities draaide Matty zelf de plaatjes, maar voor deze 3de editie vroeg hij mij om een dj-set te komen spelen. Bedankt Matty :Icon{name=ph:hands-praying size=20} Dat zie ik uiteraard helemaal zitten :Icon{name=la:grin-alt-solid size=20}
+Bij de eerste 2 edities draaide Matty zelf de plaatjes, maar voor deze 3de editie vroeg hij mij ([Wouter](/about)) om een dj-set te komen spelen. Bedankt Matty :Icon{name=ph:hands-praying size=20} Dat zie ik uiteraard helemaal zitten :Icon{name=la:grin-alt-solid size=20}
 
-Dit de beschrijving die Matty gaf aan het evenement:
+Dit is de beschrijving die Matty gaf aan het evenement:
 
 > Extatic evening on Sunday 16/4 van 19u tot 21u met Dj Wouter, die plaatjes leerde draaien in de jaren 90 📀 
 > Hij ontdekte enkele jaren terug extatic dance in Bali. Intussen specialiseert hij zich ook in muziek voor trancedans sessies. 
