--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -15,7 +15,7 @@
     "contact": "Contact"
   },
   "home": {
-    "title": "Harmonics",
+    "title": "harmonics",
     "tagline": "Healing power of Sound, Music and Dance",
     "services": "Trance Dance, Ecstatic Dance, Immersive Soundbaths, Music Production"
   },
