--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -15,7 +15,7 @@
     "contact": "Contact"
   },
   "home": {
-    "title": "Harmonics",
+    "title": "harmonics",
     "tagline": "Genezende kracht van Geluid, Muziek en Dans",
     "services": "Trance Dance, Ecstatic Dance, Immersive Soundbaths, Muziek Productie"
   },
