--- a/content/en/news/10.trancedancecroixoupile.md
+++ b/content/en/news/10.trancedancecroixoupile.md
@@ -15,6 +15,7 @@ category: trance
 
 After a pleasant time-out and a beautiful summer, we will start again with monthly trance dance sessions.
 These will now take place every first Monday of the month in Zaal Croix ou Pile in Saint-Sauveur, near Ronse.
+Facilitators are Karien Detavernier en Wouter Vernaillen.
 
 These 3 dates are confirmed:
 * Monday, October 2, 2023 at 7 p.m
