--- a/content/news/10.trancedancecroixoupile.md
+++ b/content/news/10.trancedancecroixoupile.md
@@ -15,6 +15,7 @@ category: trance
 
 Na een deugddoende time-out en mooie zomer, starten we binnenkort opnieuw met maandelijkse trancedans sessies.
 Deze zullen voortaan elke eerste maandag van de maand doorgaan in Zaal Croix ou Pile te Saint-Sauveur, nabij Ronse.
+Facilitators zijn Karien Detavernier en Wouter Vernaillen.
 
 Deze 3 datums liggen intussen vast:
 * Maandag 2 oktober 2023 om 19u
