--- a/content/en/news/10.trancedancecroixoupile.md
+++ b/content/en/news/10.trancedancecroixoupile.md
@@ -8,6 +8,7 @@ author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
 header:
     image: /images/trancedance/trancedans-header2.png
+    video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
 category: trance
 ---
 
