--- a/content/news/09.thedanceofmyawakeningsoul.md
+++ b/content/news/09.thedanceofmyawakeningsoul.md
@@ -14,8 +14,7 @@ category: ecstatic
 :::div{.col-left}
 ## A Conscious Healing Dance from Dark into Light into Colour
 
-by [SofieAFDeSmet](https://www.sofieafdesmet.com/dance-gatherings)
-
+Een project van [SofieAFDeSmet](https://www.sofieafdesmet.com/dance-gatherings):
 
 >Dancing — besides creating art, has always played a major role in my life since childhood.
 I find so much solace and joyousness in music. Not only to express myself, but because it also reveals what might be unconsciously repressed within me, but wants to be felt, released and regulated within my nervous system in order to heal my mental, physical and emotional body. When I dance, I sink back into my own essence, I feel free, freed, worthy, safe, loved. I feel my Natural Self, I feel alive. As I dance I become the dance — we are one.
@@ -24,20 +23,26 @@ If you love to dance and you crave a new experience that involves free dancing i
 
 Allow yourself to unleash and transcend your rawest, purest, authentic Wild Self to raise your vibration into a higher state.
 
-Just close your eyes, follow the flow of your own unique body in the moment, experience what comes up from deep within, feel the natural ecstasy and enjoy this Conscious Healing Dance from Dark into Light into full Colour together with me.
+Just close your eyes, follow the flow of your own unique body in the moment, experience what comes up from deep within, feel the natural ecstasy and enjoy this **Conscious Healing Dance from Dark into Light into full Colour** together with me.
 
 :HorizontalRule{category=ecstatic}
+
+Meer info over wat je mag verwachten kan je terugvinden op de website van Sofie AF DeSmet: [https://www.sofieafdesmet.com/dance-gatherings](https://www.sofieafdesmet.com/dance-gatherings)
 
 :HButton{to=https://forms.wix.com/f/7099408920224989879 label='Ticket reservatie'}
 
 :::
 :::div{.col-right}
 
+:FloatingVideo{src=https://video.wixstatic.com/video/898d86_07074b7c09d14c9abca3df6168ae93b1/480p/mp4/file.mp4 thumbnail=/images/news/awakeningsoul/awakeningsoulvideoplaceholder.png title='The Dance of my Awakening Soul'}
+
+:HorizontalRule{category=ecstatic}
+
 > Music bypasses the conceptual mind.
 
 ~ Eckhart Tolle ~
 
-:FloatingVideo{src=https://video.wixstatic.com/video/898d86_07074b7c09d14c9abca3df6168ae93b1/480p/mp4/file.mp4 thumbnail=/images/news/awakeningsoul/awakeningsoulvideoplaceholder.png title='The Dance of my Awakening Soul'}
+:HorizontalRule{category=ecstatic}
 
 :::
 :::div{.col-clear}
