text Dance Gathering

--- a/content/en/news/09.thedanceofmyawakeningsoul.md
+++ b/content/en/news/09.thedanceofmyawakeningsoul.md
@@ -27,7 +27,10 @@ Just close your eyes, follow the flow of your own unique body in the moment, exp
 
 :HorizontalRule{category=ecstatic}
 
-You can find more info about what to expect on the official event page on Sofie AF DeSmet's website: [https://www.sofieafdesmet.com/dance-gatherings](https://www.sofieafdesmet.com/dance-gatherings)
+The music was selected by Sofie AF DeSmet, and she asked me to mix the songs together.
+The result will be a 2 hour mix that takes you on a journey from dark to light, from deep to high, from inside out, from your head to your heart, from your heart to your soul, from your soul to the universe.
+
+You can find more info about what to expect on the official event page on Sofie AF DeSmet's website: [www.sofieafdesmet.com/dance-gatherings](https://www.sofieafdesmet.com/dance-gatherings)
 
 :HButton{to=https://forms.wix.com/f/7099408920224989879 label='Ticket reservatie'}
 
@@ -38,9 +41,9 @@ You can find more info about what to expect on the official event page on Sofie 
 
 :HorizontalRule{category=ecstatic}
 
-> Music bypasses the conceptual mind.
+> The body expresses what the mind suppresses. - 
 
-~ Eckhart Tolle ~
+~ Medicine Mami ~
 
 :HorizontalRule{category=ecstatic}
 
