--- a/content/news/09.thedanceofmyawakeningsoul.md
+++ b/content/news/09.thedanceofmyawakeningsoul.md
@@ -27,7 +27,10 @@ Just close your eyes, follow the flow of your own unique body in the moment, exp
 
 :HorizontalRule{category=ecstatic}
 
-Meer info over wat je mag verwachten kan je terugvinden op de website van Sofie AF DeSmet: [https://www.sofieafdesmet.com/dance-gatherings](https://www.sofieafdesmet.com/dance-gatherings)
+De muziek werd geselecteerd door Sofie AF DeSmet, en ze vroeg mij om de nummers te mixen tot een geheel. 
+Het resultaat wordt een 2 uur durende mix die je meeneemt op een reis van donker naar licht, van diep naar hoog, van binnen naar buiten, van je hoofd naar je hart, van je hart naar je ziel, van je ziel naar het universum.
+
+Meer info over wat je mag verwachten kan je terugvinden op de website van Sofie AF DeSmet: [www.sofieafdesmet.com/dance-gatherings](https://www.sofieafdesmet.com/dance-gatherings)
 
 :HButton{to=https://forms.wix.com/f/7099408920224989879 label='Ticket reservatie'}
 
@@ -38,9 +41,9 @@ Meer info over wat je mag verwachten kan je terugvinden op de website van Sofie 
 
 :HorizontalRule{category=ecstatic}
 
-> Music bypasses the conceptual mind.
+> The body expresses what the mind suppresses. - 
 
-~ Eckhart Tolle ~
+~ Medicine Mami ~
 
 :HorizontalRule{category=ecstatic}
 
