update content Trancedans Croix ou Pile

--- a/content/03.trancedance.md
+++ b/content/03.trancedance.md
@@ -24,6 +24,9 @@ Er zijn geen vaste passen, je beweegt vrij en danst je eigen dans vanuit jouw in
 Dit laat toe om vaste geconditioneerde denkpatronen los te laten of te transformeren.
 Je wordt meegevoerd naar daar waar heling plaatsvindt. 
 
+De trancedans is tevens ook een healing waar bij we o a. gebruik maken van soundhealing en smudging met verschillende kruiden
+
+
 :HorizontalRule{category=trance .hidden .md:block}
 
 :::
