--- a/content/en/03.trancedance.md
+++ b/content/en/03.trancedance.md
@@ -24,6 +24,8 @@ There are no fixed steps, you move freely and dance your own dance from within y
 This allows you to release or transform conditioned thinking patterns.
 You are taken to where healing takes place.
 
+The trance dance is also a healing where we use, among other things, sound healing and smudging with various herbs.
+
 :HorizontalRule{category=trance .hidden .md:block}
 
 :::
