--- a/content/en/news/10.trancedancecroixoupile.md
+++ b/content/en/news/10.trancedancecroixoupile.md
@@ -3,7 +3,7 @@ isNews: true
 language: en
 title: Trancedans Croix ou Pile 
 desc: Monthly Trance dance sessions in Saint-Sauveur, near Ronse
-date: 09/04/2023
+date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
 header:
@@ -14,19 +14,31 @@ category: trance
 
 :::div{.col-left}
 
+## New: Trance dance in Croix ou Pile
+
 After a pleasant time-out and a beautiful summer, we will start again with monthly trance dance sessions.
 These will now take place every first Monday of the month in Zaal Croix ou Pile in Saint-Sauveur, near Ronse.
-Facilitators are Karien Detavernier en Wouter Vernaillen.
+Facilitators are [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) and [Wouter Vernaillen](/en/about).
 
-These 3 dates are confirmed:
+Dates for autumn 2023:
 * Monday, October 2, 2023 at 7 p.m
 * Monday, November 6, 2023 at 7 p.m
 * Monday, December 4, 2023 at 7 p.m
 
+Is Trance dance new to you? Then take a look at our [Trance Dance page](/en/trancedance).
+
 :HorizontalRule{category=trance}
 
-More info will follow soon.
-You can [Contact Wouter](/contact) if you have any questions or would like to reserve a spot.
+## 2 october: Dance your inner freedom
+
+For Monday October 2 we are preparing dance and music around the theme "Dance your inner freedom".
+
+## Registration
+
+Because places are limited, we ask that you register in advance by sending a message to [Wouter](/contact).
+
+We propose an amount between 33 and 44 euros as a contribution, depending on your financial situation.
+You can bring the amount in cash on the evening itself or transfer it to Harmonics account number BE70 7370 3835 2025, stating your name and the date of the trance dance.
 
 :::
 :::div{.col-right}
@@ -41,6 +53,20 @@ caption: Zaal Croix ou Pile
 imageShadow: true
 ---
 ::
+
+## Program
+
+* welcome from 7pm
+* we start promptly at 7:15 PM with an opening circle by Karien
+* next we start the dance, which lasts about an hour and a half and ends with an integration moment
+* closing circle
+* we finish around 9:45 PM
+
+## What to bring?
+* a blindfold, best with several dark layers of fabric
+* a blanket (during integration moment after the dance)
+* bottle of water
+* possibly a pen and paper to write down your experiences after the dance
 
 :::
 :::div{.col-clear}
