--- a/content/news/10.trancedancecroixoupile.md
+++ b/content/news/10.trancedancecroixoupile.md
@@ -3,7 +3,7 @@ isNews: true
 language: nl
 title: Trancedans Croix ou Pile 
 desc: Maandelijkse Trancedans sessies te Saint-Sauveur, nabij Ronse
-date: 09/04/2023
+date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
 header:
@@ -14,19 +14,31 @@ category: trance
 
 :::div{.col-left}
 
+## Nieuw: Trancedans in Zaal Croix ou Pile
+
 Na een deugddoende time-out en mooie zomer, starten we binnenkort opnieuw met maandelijkse trancedans sessies.
 Deze zullen voortaan elke eerste maandag van de maand doorgaan in Zaal Croix ou Pile te Saint-Sauveur, nabij Ronse.
-Facilitators zijn Karien Detavernier en Wouter Vernaillen.
+Facilitators zijn [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) en [Wouter Vernaillen](/about).
 
-Deze 3 datums liggen intussen vast:
+Data voor het najaar van 2023:
 * Maandag 2 oktober 2023 om 19u
 * Maandag 6 november 2023 om 19u
 * Maandag 4 december 2023 om 19u
 
-Meer info volgt binnenkort. 
-Je kan [Wouter contacteren](/contact) mocht je vragen hebben of graag al een plekje wil reserveren.
+Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
 
 :HorizontalRule{category=trance}
+
+## 2 oktober: Dance your inner freedom
+
+Voor maandag 2 oktober bereiden we een dans en muziek voor rond het thema "Dance your inner freedom"
+
+## Inschrijven
+
+Omdat de plaatsen beperkt zijn vragen we om vooraf in te schrijven door een bericht te sturen naar [Wouter](/contact).
+
+Als bijdrage stellen we een bedrag voor tussen 33 tot 44 euro, afhankelijk van je  financiële situatie.
+Je kan het bedrag cash meebrengen op de avond zelf of overschrijven op rekeningnummer BE70 7370 3835 2025 van Harmonics, met vermelding van je naam en datum van de trancedans.
 
 :::
 :::div{.col-right}
@@ -41,6 +53,20 @@ caption: Zaal Croix ou Pile
 imageShadow: true
 ---
 ::
+
+## Programma
+
+* welkom vanaf 19u
+* start stipt om 19u15 met opening cirkel door Karien
+* aansluitend starten we de dans, deze duurt ongeveer anderhalf uur en wordt afgesloten met een integratiemoment
+* closing cirkel
+* we ronden af tegen 21u45
+
+## Meebrengen
+* een blinddoek, best met meerdere donkere lagen stof
+* een dekentje (tijdens integratie moment na de dans)
+* flesje water
+* eventueel pen en papier om na de dans je ervaringen te noteren
 
 :::
 :::div{.col-clear}
