--- a/content/en/news/10.trancedancedehierberg.md
+++ b/content/en/news/10.trancedancedehierberg.md
@@ -1,8 +1,8 @@
 ---
 isNews: true
 language: en
-title: Trancedans Croix ou Pile 
-desc: Monthly Trance dance sessions in Saint-Sauveur, near Ronse
+title: Trancedans @ De Hierberg
+desc: Monthly Trance dance sessions in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
@@ -14,10 +14,10 @@ category: trance
 
 :::div{.col-left}
 
-## New: Trance dance in Croix ou Pile
+## New: Trance dance @ De Hierberg
 
 After a pleasant time-out and a beautiful summer, we will start again with monthly trance dance sessions.
-These will now take place every first Monday of the month in Zaal Croix ou Pile in Saint-Sauveur, near Ronse.
+These will now take place every first Monday of the month in [De Hierberg](https://www.hierberg.be/) in Nukerke (Maarkedal).
 Facilitators are [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) and [Wouter Vernaillen](/en/about).
 
 Dates for autumn 2023:
@@ -45,11 +45,11 @@ You can bring the amount in cash on the evening itself or transfer it to Harmoni
 
 ::FloatingImage
 ---
-src: /images/news/trancedancecroixoupile/zaalcroixoupile.png
+src: /images/news/trancedancedehierberg/hierberg.jpg
 width: 800
 height: 400
 cssClass: full
-caption: Zaal Croix ou Pile
+caption: De Hierberg
 imageShadow: true
 ---
 ::
