--- a/content/news/10.trancedancedehierberg.md
+++ b/content/news/10.trancedancedehierberg.md
@@ -1,8 +1,8 @@
 ---
 isNews: true
 language: nl
-title: Trancedans Croix ou Pile 
-desc: Maandelijkse Trancedans sessies te Saint-Sauveur, nabij Ronse
+title: Trancedans in De Hierberg
+desc: Maandelijkse Trancedans sessies in De Hierberg te Nukerke (Maarkedal)
 date: 09/12/2023
 author: Wouter Vernaillen
 thumb_video: /images/news/trancedancemusic/pexels-cottonbro-10556703.mp4
@@ -14,10 +14,10 @@ category: trance
 
 :::div{.col-left}
 
-## Nieuw: Trancedans in Zaal Croix ou Pile
+## Nieuw: Trancedans in De Hierberg
 
 Na een deugddoende time-out en mooie zomer, starten we binnenkort opnieuw met maandelijkse trancedans sessies.
-Deze zullen voortaan elke eerste maandag van de maand doorgaan in Zaal Croix ou Pile te Saint-Sauveur, nabij Ronse.
+Deze zullen voortaan elke eerste maandag van de maand doorgaan in [De Hierberg](https://www.hierberg.be/) te Nukerke (Maarkedal).
 Facilitators zijn [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie) en [Wouter Vernaillen](/about).
 
 Data voor het najaar van 2023:
@@ -45,11 +45,11 @@ Je kan het bedrag cash meebrengen op de avond zelf of overschrijven op rekeningn
 
 ::FloatingImage
 ---
-src: /images/news/trancedancecroixoupile/zaalcroixoupile.png
+src: /images/news/trancedancedehierberg/hierberg.jpg
 width: 800
 height: 400
 cssClass: full
-caption: Zaal Croix ou Pile
+caption: De Hierberg
 imageShadow: true
 ---
 ::
