simply be gallery

--- a/content/en/news/11.nieuwemaancacaoecstaticdance.md
+++ b/content/en/news/11.nieuwemaancacaoecstaticdance.md
@@ -19,7 +19,10 @@ We ceremoniously connect with the Cacao medicine and place our intentions, guide
 DJ Harmonics then takes us on a compelling, ecstatic dance journey with shamanic, tribal and southern sounds from all over the world!
 
 DJ Harmonics (Wouter Vernaillen) combines trance dance and sound healing knowledge with DJ skills from a past life. In addition to facilitating trance dance, he enjoys providing live DJ sets for Ecstatic Dance.
+
 Cocoa is a gentle medicine that, among other things, opens the heart. It provides a warm and energetic feeling where there is room to consciously be present in the here and now. In addition, it has numerous positive effects on the body's self-healing capacity.
+
+:HorizontalRule{category=ecstatic}
 
 ### Where?
 Simply Be
@@ -29,18 +32,12 @@ Daalpad (at the end on the right)
 ### Energetic exchange?
 From €33 to €44 according to what is possible and feels good for you.
 
-### What to bring?
-- an empty stomach so you can fully enjoy the Cacao
-- a blanket to cover yourself for the quiet integration afterwards
-- an open heart and mind for this profound journey towards self-expression, healing and connection
-
-Water and tea are provided…
-
 ### Information & registrations?
 info@simply-be.be
 
 We look forward to meet you!
 
+:HorizontalRule{category=ecstatic}
 :::
 :::div{.col-right}
 
@@ -55,6 +52,16 @@ imageShadow: false
 ---
 ::
 
+### What to bring?
+- an empty stomach so you can fully enjoy the Cacao
+- a blanket to cover yourself for the quiet integration afterwards
+- an open heart and mind for this profound journey towards self-expression, healing and connection
+
+Water and tea are provided…
+
 :::
 :::div{.col-clear}
 :::
+
+::ImageGallery{folder="news/nieuwemaancacaoecstaticdance/gallery"}
+::
