--- a/content/news/11.nieuwemaancacaoecstaticdance.md
+++ b/content/news/11.nieuwemaancacaoecstaticdance.md
@@ -19,7 +19,10 @@ Samen verbinden we, onder begeleiding van Sandrine, ceremonieel met het Cacao me
 Vervolgens neemt DJ Harmonics ons mee op een meeslepende, extatische dansreis met sjamanistische, tribal en zuiderse klanken van over heel de wereld!
 
 DJ Harmonics (Wouter Vernaillen) combineert trancedans en soundhealing kennis met dj skills uit een vorig leven. Naast het faciliteren van trancedans verzorgt hij graag live dj-sets voor Ecstatic Dance.
+
 Cacao is een zacht medicijn dat onder andere het hart opent. Het zorgt voor een warm en energiek gevoel waar er ruimte is om bewust in het hier en nu aanwezig te zijn. Bovendien heeft het tal van positieve werkingen op het zelfhelende vermogen van het lichaam.
+
+:HorizontalRule{category=ecstatic}
 
 ### Waar?
 Te Simply Be
@@ -29,17 +32,12 @@ Daalpad (helemaal beneden rechts)
 ### Energetische uitwisseling? 
 Van 33€ tot 44€ volgens wat voor jou mogelijk is en goed voelt.
 
-### Wat meebrengen?
-- een lege maag zodat je volop kan genieten van de Cacao
-- een dekentje om jezelf te bedekken voor de rustige integratie erna
-- een open hart en geest voor deze diepgaande reis naar zelfexpressie, genezing en verbinding
-
-Er wordt voorzien in water en thee…
-
 ### Informatie & inschrijvingen?
 info@simply-be.be
 
 We kijken ernaar uit jou te (her)ontmoeten!
+
+:HorizontalRule{category=ecstatic}
 
 :::
 :::div{.col-right}
@@ -55,6 +53,16 @@ imageShadow: false
 ---
 ::
 
+### Wat meebrengen?
+- een lege maag zodat je volop kan genieten van de Cacao
+- een dekentje om jezelf te bedekken voor de rustige integratie erna
+- een open hart en geest voor deze diepgaande reis naar zelfexpressie, genezing en verbinding
+
+Er wordt voorzien in water en thee…
+
 :::
 :::div{.col-clear}
 :::
+
+::ImageGallery{folder="news/nieuwemaancacaoecstaticdance/gallery"}
+::
