update New Moon post

--- a/content/en/news/11.nieuwemaancacaoecstaticdance.md
+++ b/content/en/news/11.nieuwemaancacaoecstaticdance.md
@@ -13,7 +13,7 @@ category: ecstatic
 
 :::div{.col-left}
 
-## Join us on Sunday afternoon October 15 for our New Maan ~ Cacao ~ Ecstatic Dance!
+## New Moon ~ Cacao ~ Ecstatic Dance on Sunday afternoon. Come and enjoy!
 
 We ceremoniously connect with the Cacao medicine and place our intentions, guided by Sandrine.
 DJ Harmonics then takes us on a compelling, ecstatic dance journey with shamanic, tribal and southern sounds from all over the world!
@@ -24,22 +24,26 @@ Cocoa is a gentle medicine that, among other things, opens the heart. It provide
 
 :HorizontalRule{category=ecstatic}
 
+### When?
+Sunday, October 15, 2023
+from 3 pm to 6 pm
+
 ### Where?
 Simply Be
 Daalpad (at the end on the right)
 9660 Brakel
 
-### Energetic exchange?
-From €33 to €44 according to what is possible and feels good for you.
-
-### Information & registrations?
-info@simply-be.be
-
-We look forward to meet you!
-
-:HorizontalRule{category=ecstatic}
 :::
 :::div{.col-right}
+
+::ImageGallery{folder="news/nieuwemaancacaoecstaticdance/gallery" columns=2 disableLightbox}
+::
+
+:::
+:::div{.col-clear}
+:::
+
+:::div{.col-left}
 
 ::FloatingImage
 ---
@@ -52,6 +56,9 @@ imageShadow: false
 ---
 ::
 
+:::
+:::div{.col-right}
+
 ### What to bring?
 - an empty stomach so you can fully enjoy the Cacao
 - a blanket to cover yourself for the quiet integration afterwards
@@ -59,9 +66,16 @@ imageShadow: false
 
 Water and tea are provided…
 
+### Energetic exchange?
+From €33 to €44 according to what is possible and feels good for you.
+
+### Information & registrations?
+info@simply-be.be
+
+We look forward to meet you!
+
+:HorizontalRule{category=ecstatic}
+
 :::
 :::div{.col-clear}
 :::
-
-::ImageGallery{folder="news/nieuwemaancacaoecstaticdance/gallery"}
-::
